--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>5x5 Tic Tac Toe</title>
   </head>
   <body>
-    <div id='root'>
+    <div id='app'>
     </div>
     <script src="/static/bundle.js"></script>
   </body>
