--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
     <title>5x5 Tic Tac Toe</title>
+    <link rel="shortcut icon" href="/favicon.ico?v=1" />
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='app'>
