--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div id='app'>
+    <div id='app-container'>
     </div>
     <script src="/static/bundle.js"></script>
   </body>
