Dist webpack config.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>5x5 Tic Tac Toe</title>
+    <title>5x5 Tic Tac Toe - Michael Young</title>
     <link rel="shortcut icon" href="/favicon.ico?v=1" />
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
